@startuml

title __MANAGER's Class Diagram__\n

    namespace manager {
      class manager.Commande {
          - idNavire : int
          + Commande()
          + Commande()
          + getActionChoisie()
          + getDirectionChoisie()
          + getEquipe()
          + getIdNavire()
          + setActionChoisie()
          + setDirectionChoisie()
          + setIdNavire()
          + toString()
      }
    }
  

    namespace manager {
      class manager.Jeu {
          # joueurs : ArrayList<Joueur>
          # taille : int
          - MAX_NBR_BATEAU : int
          - NBR_JOUEUR : int
          - fini : boolean
          - nbTour : int
          - random : Random
          - scanner : Scanner
          + Jeu()
          + affichageJoueurs()
          + affichageMenu()
          + attributionNavire()
          + choixJoueurs()
          + creationJoueur()
          + finDePartie()
          + generateNewPosition()
          + isGagne()
          + isValidPosition()
          + jouer()
          + majJeuAvCommande()
          + majJeuCasDeplacement()
          + majJeuCasPeche()
          + majJeuCasTir()
          + majListeNavire()
          + positionnementNavire()
      }
    }
  

  manager.Commande o-- tools.Action : actionChoisie
  manager.Commande o-- tools.Direction : directionChoisie
  manager.Commande o-- equipe.Equipe : equipe
  manager.Jeu o-- plateau.Plateau : plateau


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
